--- a/src/main/resources/application-localhost.properties
+++ b/src/main/resources/application-localhost.properties
@@ -4,6 +4,7 @@ server.port=8080
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 spring.jackson.serialization.write-null-map-values=false
+spring.jackson.serialization.indent-output=true
 #db
 spring.datasource.url=jdbc:h2:file:~/aibton/server_monitor_db
 spring.datasource.username=ServerMonitor
@@ -17,6 +18,7 @@ spring.h2.console.path=/h2-console
 #配置项目启动 h2就启动
 spring.h2.console.enabled=true
 #jpa
+spring.jpa.database=h2
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jackson.serialization.indent-output=true
+spring.jpa.properties.hibernate.format_sql=true
