--- a/src/main/resources/application-localhost.properties
+++ b/src/main/resources/application-localhost.properties
@@ -22,3 +22,14 @@ spring.jpa.database=h2
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+# thymeleaf
+spring.thymeleaf.cache=false
+spring.thymeleaf.check-template-location=false
+spring.thymeleaf.servlet.content-type=text/html
+spring.thymeleaf.enabled=true
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.prefix=classpath:/template
+spring.thymeleaf.suffix=.html
+# SPRING RESOURCES HANDLING (ResourceProperties)
+spring.resources.chain.cache=false
