--- a/src/main/resources/application-localhost.properties
+++ b/src/main/resources/application-localhost.properties
@@ -33,3 +33,5 @@ spring.thymeleaf.prefix=classpath:/template
 spring.thymeleaf.suffix=.html
 # SPRING RESOURCES HANDLING (ResourceProperties)
 spring.resources.chain.cache=false
+#other config
+user.system.project-workspace=/usr/local/java/workspace/ycl/ycl
