添加API权限认证

--- a/src/main/resources/application-localhost.properties
+++ b/src/main/resources/application-localhost.properties
@@ -34,4 +34,6 @@ spring.thymeleaf.suffix=.html
 # SPRING RESOURCES HANDLING (ResourceProperties)
 spring.resources.chain.cache=false
 #other config
-user.system.project-workspace=/usr/local/java/workspace/ycl/ycl
+user.system.projectWorkspace=/usr/local/java/workspace/ycl/ycl
+#是否打开权限认证
+user.system.openUrlAuth=false
