--- a/src/main/resources/application-localhost.properties
+++ b/src/main/resources/application-localhost.properties
@@ -36,4 +36,4 @@ spring.resources.chain.cache=false
 #other config
 user.system.projectWorkspace=/usr/local/java/workspace/ycl/ycl
 #是否打开权限认证
-user.system.openUrlAuth=false
+user.system.openUrlAuth=true
