新增开放接口

--- a/src/main/resources/application-localhost.properties
+++ b/src/main/resources/application-localhost.properties
@@ -21,6 +21,7 @@ spring.h2.console.enabled=true
 spring.jpa.database=h2
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.format_sql=true
 # thymeleaf
 spring.thymeleaf.cache=false
